<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">anon</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="password_again">Confirm Password</string>
    <string name="log_me_in">Log In!</string>
    <string name="create_acct">Create an Account</string>
    <string name="name">First and Last Name</string>
    <string name="ok">OK!</string>
    <string name="cancel">Cancel</string>
    <string name="create_new_group">Create New Group</string>
    <string name="search_groups">Search Your Groups</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="group_name">Group Name</string>
    <string name="new_post">New Post</string>
    <string name="new_comment">New Comment</string>
    <string name="new_user">New User</string>
    <string name="add_new_user">Add New User</string>
    <string name="view_group_list">View Group List</string>
    <string name="enter_user_email">Enter User\'s Email Address</string>

    <string name="alert_name_clarification"><u>Why do we need this?</u></string>
    <string name="alert_name_title">Why do we need your name?</string>
    <string name="alert_name_text">While all of your posts and comments
        are completely anonymous, other members in your group have the ability
        to see who is in the group. To do this, we need your name. Your identity
        will remain completely unknown at all other times!</string>
    
    <string name="error_intro">"Please "</string>
    <string name="error_blank_username">enter a username</string>
    <string name="error_blank_email">enter an email</string>
    <string name="error_invalid_email">enter a valid email</string>
    <string name="error_blank_password">enter a password</string>
    <string name="error_mismatched_passwords">enter a password</string>
    <string name="error_join">", and "</string>
    <string name="error_end">.</string>
    <string name="progress_login">Logging in...</string>
    <string name="progress_signup">Signing in...</string>

    <string name="loser">You don\'t have any groups!\n\n↑ Add one now ↑</string>
    
    <!-- ******* Post Testing ******* -->
    <string name="message">Enter message</string>
    <string name="button_send">Send</string>

</resources>
