<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LogInTheme">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/app_name"
        android:textSize = "50dp"
        android:gravity="center"
        android:textColor="#FFFFFF" >
    </TextView>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" >
    
    <EditText 
        android:id="@+id/etLoginEmailAddress"
        android:layout_width="285dp"
        android:layout_height="30dp"
        android:background="@drawable/rounded_edittext"
        android:textColor="#000000"
        android:hint="@string/email"
        android:singleLine="true"
        android:gravity="center"
        android:inputType="textEmailAddress" >
    </EditText>
    
    <EditText 
        android:id="@+id/etLoginPassword"
        android:layout_width="285dp"
        android:layout_height="30dp"
        android:background="@drawable/rounded_edittext"
        android:textColor="#000000"
        android:singleLine="true"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:gravity="center"
        android:inputType="textPassword" >
    </EditText>
    
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">
        
        <Button 
            android:id="@+id/bLogInUser"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:text="@string/log_me_in"
            android:color="#9933CC" >
        </Button>
        
        <Button 
            android:id="@+id/bCreateNewUserFromMain"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:text="@string/create_acct"
            android:color="#9933CC"  >
        </Button>
        
    </LinearLayout>

</RelativeLayout>