<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/PurpleBackgroundTheme">

    <TextView
        android:id="@+id/tvCreateNewUserTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_acct"
        android:layout_marginTop="40dp"
        android:textSize = "30dp"
        android:gravity="center"
        android:textColor="#FFFFFF" >
    </TextView>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" >
    
    <EditText 
        android:id="@+id/etNewUserNameInfo"
        android:layout_width="285dp"
        android:layout_height="43dp"
        android:background="@drawable/rounded_edittext"
        android:textColor="#000000"
        android:hint="@string/name"
        android:singleLine="true"
        android:gravity="center"
        android:inputType="textPersonName" >
    </EditText>

    <TextView
        android:id="@+id/tvNameClarification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_name_clarification"
        android:layout_marginTop="10dp"
        android:textSize = "15dp"
        android:gravity="center"
        android:textColor="#FFFFFF" >
    </TextView>
    
    <EditText 
        android:id="@+id/etNewUserEmailAddressInfo"
        android:layout_width="285dp"
        android:layout_height="43dp"
        android:background="@drawable/rounded_edittext"
        android:textColor="#000000"
        android:hint="@string/email"
        android:singleLine="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:inputType="textEmailAddress" >
    </EditText>
    
    <EditText 
        android:id="@+id/etNewUserPasswordInfo"
        android:layout_width="285dp"
        android:layout_height="43dp"
        android:background="@drawable/rounded_edittext"
        android:textColor="#000000"
        android:singleLine="true"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:gravity="center"
        android:inputType="textPassword" >
    </EditText>

     <EditText 
        android:id="@+id/etNewUserPasswordAgainInfo"
        android:layout_width="285dp"
        android:layout_height="43dp"
        android:background="@drawable/rounded_edittext"
        android:textColor="#000000"
        android:singleLine="true"
        android:layout_marginTop="10dp"
        android:hint="@string/password_again"
        android:gravity="center"
        android:inputType="textPassword" >
    </EditText>
    
    </LinearLayout>
    
    <RelativeLayout 
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
     
        <View
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_alignParentTop="true"
            android:background="@color/white" />

        <View
            android:id="@+id/split"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:background="@color/white" />
        
        <Button 
            android:id="@+id/bCancelCreateNewUser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/top"
            android:layout_centerHorizontal="true"
            android:layout_toLeftOf="@+id/split"
            android:background="@drawable/group_background"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="20sp"  >
        </Button>
        
        <Button 
            android:id="@+id/bCreateNewUser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/top"
            android:layout_centerHorizontal="true"
            android:layout_toRightOf="@+id/split"
            android:background="@drawable/group_background"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="20sp"  >
        </Button>
        
    </RelativeLayout>

</RelativeLayout>